# ecash-protocol

./: .env.example  .gitignore  BUILD_SUMMARY.md  Cargo-client.toml  Cargo-dev.toml  DELIVERY.md  QUICKSTART.md  README.md  WORKSPACE.md  docker-compose.yml  ecash-protocol-whitepaper.md
crates/demo-wallet/: Cargo.toml  README.md
crates/demo-wallet/src/: main.rs
crates/ecash-client/: Cargo.toml
crates/ecash-client/src/: api.rs  error.rs  lib.rs  qr.rs  storage.rs  wallet.rs  wallet.rs.backup  wallet_backup.rs
crates/ecash-core/: Cargo.toml
crates/ecash-core/src/: crypto.rs  error.rs  lib.rs  protocol.rs  token.rs
crates/ecash-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  schema.sql
crates/ecash-server/migrations/: 20241205_init.sql
crates/ecash-server/src/: cache.rs  config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs  types.rs
deployment/kubernetes/: deployment.yaml
deployment/nginx/: nginx.conf
docs/: index.html
