[package]
name = "ecash-client"
version = "0.1.0"
edition = "2021"
authors = ["ChronoCoders"]
description = "Client SDK for eCash protocol with wallet functionality"
license = "MIT"
repository = "https://github.com/ChronoCoders/ecash-protocol"
homepage = "https://chronocoders.github.io/ecash-protocol"
documentation = "https://docs.rs/ecash-client"
keywords = ["ecash", "wallet", "client", "sdk", "cryptography"]
categories = ["cryptography", "api-bindings"]

[dependencies]
ecash-core = { path = "../ecash-core", version = "0.1.0" }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { workspace = true }
rsa = { workspace = true }
qrcode = "0.14"
image = "0.25"
base64 = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }