[package]
name = "ecash-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
