[package]
name = "ecash-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ecash-core = { path = "../ecash-core" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

# Config
config = "0.14"
