[package]
name = "ecash-server"
version = "0.1.0"
edition = "2021"
authors = ["ChronoCoders"]
description = "REST API server for eCash blind signature protocol"
license = "MIT"
repository = "https://github.com/ChronoCoders/ecash-protocol"
homepage = "https://chronocoders.github.io/ecash-protocol"
documentation = "https://docs.rs/ecash-server"
keywords = ["ecash", "api", "server", "cryptocurrency", "privacy"]
categories = ["web-programming::http-server", "cryptography"]

[dependencies]
ecash-core = { path = "../ecash-core", version = "0.1.0" }
tokio = { workspace = true }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
dotenvy = "0.15"
rsa = { workspace = true }
num-bigint = { workspace = true }
base64 = { workspace = true }